--- a/build.gradle
+++ b/build.gradle
@@ -101,7 +101,7 @@ dependencies {
     else implementation 'com.github.mineinabyss:guiy:kotlin-dsl-SNAPSHOT'
 
     if (useLocalIdofront.toBoolean()) implementation project(':idofront')
-    else implementation 'com.mineinabyss:idofront:0.1.+'
+    else implementation 'com.mineinabyss:idofront:0.1.2-alpha.11'
 }
 
 shadowJar {
