--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
     id 'java'
     id 'idea'
     id 'maven-publish'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.3.70'
+    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
 }
 
 apply plugin: 'com.github.johnrengelman.shadow'
@@ -111,8 +111,7 @@ dependencies {
     compileOnly "com.sk89q.worldguard:worldguard-bukkit:7.0.2" //WorldGuard
     compileOnly "com.comphenix.protocol:ProtocolLib:4.5.0"
     compileOnly "com.github.WesJD.AnvilGUI:anvilgui:5e3ab1f721"
-    implementation "org.nield:kotlin-statistics:1.2.1"
-    compileOnly "org.cultofclang.minecraft:kotlinspice:0.1.12"
+    compileOnly "org.cultofclang.minecraft:kotlinspice:$kotlin_version+"
 
     if (useLocalGuiy.toBoolean()) implementation project(':guiy')
     else implementation "com.derongan.minecraft:guiy:0.1.+"
