Clean up gradle

--- a/build.gradle
+++ b/build.gradle
@@ -7,61 +7,39 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.2.0'
     id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
     id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
-    id "com.jarnoharno.github-packages" version "1.0.0"
+    id 'com.jarnoharno.github-packages' version '1.0.0'
 }
 
 group = 'com.mineinabyss'
 version = plugin_version
-
 if (project.hasProperty("buildNo")) version += ".$buildNo"
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    setSourceCompatibility(1.8)
+    setTargetCompatibility(1.8)
+    withSourcesJar()
+    withJavadocJar()
+}
 
-def github_username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-def github_password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
 githubPackages {
-    username = github_username
-    accessToken = github_password
+    username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+    accessToken = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
 }
 
 repositories {
     mavenCentral()
     jcenter()
     maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
-    maven githubPackages("MineInAbyss/Idofront")
-    maven githubPackages("MineInAbyss/Guiy")
-    maven githubPackages("CultOfClang/Minecraft")
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     maven { url 'https://erethon.de/repo/' } //HeadLib
     maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
     maven { url 'https://jitpack.io' } //JitPack
     maven { url "https://repo.dmulloy2.net/nexus/repository/public/" }
     maven { url 'https://maven.sk89q.com/repo/' } //WorldGuard/Edit
+    maven githubPackages("MineInAbyss/Idofront")
+    maven githubPackages("MineInAbyss/Guiy")
+    maven githubPackages("CultOfClang/Minecraft")
     mavenLocal()
-}
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-    getArchiveClassifier().set('sources')
-    from sourceSets.main.allSource
-}
-
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    getArchiveClassifier().set('javadoc')
-    from javadoc.destinationDir
-}
-
-publishing {
-    repositories {
-        maven githubPackages("MineInAbyss/Mobzy")
-    }
-    publications {
-        gpr(MavenPublication) {
-            from components.java
-            artifact sourcesJar
-            artifact javadocJar
-        }
-    }
 }
 
 dependencies {
@@ -73,11 +51,8 @@ dependencies {
     compileOnly "com.github.WesJD.AnvilGUI:anvilgui:5e3ab1f721"
     compileOnly "org.cultofclang.minecraft:kotlinspice:$kotlin_version+"
 
-    if (project.hasProperty("useLocalGuiy") && useLocalGuiy.toBoolean()) implementation "com.derongan.minecraft:guiy"
-    else implementation "com.derongan.minecraft:guiy:0.1.+"
-
-    if (project.hasProperty("useLocalIdofront") && useLocalIdofront.toBoolean()) implementation "com.mineinabyss:idofront"
-    else implementation "com.mineinabyss:idofront:0.1.+"
+    implementation "com.derongan.minecraft:guiy:0.1.+"
+    implementation "com.mineinabyss:idofront:0.1.+"
 }
 
 shadowJar {
@@ -95,9 +70,7 @@ shadowJar {
 build.dependsOn shadowJar
 
 processResources {
-    from(sourceSets.main.resources.srcDirs) {
-        filter ReplaceTokens, tokens: [plugin_version: plugin_version]
-    }
+    filter ReplaceTokens, tokens: [plugin_version: plugin_version]
 }
 
 compileKotlin { kotlinOptions { jvmTarget = "1.8" } }
@@ -111,4 +84,17 @@ if (project.hasProperty("plugin_path") && plugin_path) {
         into plugin_path
     }
     build.dependsOn copyJar
+}
+
+publishing {
+    repositories {
+        maven githubPackages("MineInAbyss/Mobzy")
+    }
+    publications {
+        gpr(MavenPublication) {
+            from components.java
+            artifact sourcesJar
+            artifact javadocJar
+        }
+    }
 }
