--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
-plugin_version=0.5.1-alpha
+plugin_version=0.6.0-alpha
 kotlin_version=1.3.72
-server_version=1.15-R0.1-SNAPSHOT
+server_version=1.16.1-R0.1-SNAPSHOT
+#useLocalIdofront=true
+useLocalGuiy=true
