--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@ plugin_version=0.6.0-alpha
 kotlin_version=1.3.72
 server_version=1.16.1-R0.1-SNAPSHOT
 #useLocalIdofront=true
-useLocalGuiy=true
+#useLocalGuiy=true
