--- a/build.gradle
+++ b/build.gradle
@@ -5,41 +5,41 @@ plugins {
     id 'idea'
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '6.0.0'
-    id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
-    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
-    id 'org.jetbrains.kotlin.kapt' version "$kotlin_version"
-    id 'com.jarnoharno.github-packages' version '1.0.0'
+    id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.kotlin.plugin.serialization'
+    id 'org.jetbrains.kotlin.kapt'
+    id 'io.github.0ffz.github-packages' version '1.0.3'
 }
 
-group = 'com.mineinabyss'
-version = plugin_version
-if (project.hasProperty("buildNo")) version += ".$buildNo"
+allprojects {
+    group = 'com.mineinabyss'
+    version = plugin_version
+    if (project.hasProperty("buildNo")) version += ".$buildNo"
+
+    repositories {
+        mavenCentral()
+        jcenter()
+        maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+        maven { url 'https://erethon.de/repo/' } //HeadLib
+        maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
+        maven { url 'https://jitpack.io' } //JitPack
+        maven { url "https://repo.dmulloy2.net/nexus/repository/public/" }
+        maven { url 'https://maven.sk89q.com/repo/' } //WorldGuard/Edit
+        maven githubPackage.invoke("MineInAbyss/Idofront")
+        maven githubPackage.invoke("MineInAbyss/Guiy")
+        maven githubPackage.invoke("MineInAbyss/KotlinSpice")
+        mavenLocal()
+    }
+
+    compileKotlin { kotlinOptions { jvmTarget = "1.8" } }
+    compileTestKotlin { kotlinOptions { jvmTarget = "1.8" } }
+}
 
 java {
     setSourceCompatibility(1.8)
     withSourcesJar()
     withJavadocJar()
-}
-
-githubPackages {
-    username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
-    accessToken = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
-}
-
-repositories {
-    mavenCentral()
-    jcenter()
-    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
-    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
-    maven { url 'https://erethon.de/repo/' } //HeadLib
-    maven { url 'https://hub.spigotmc.org/nexus/content/groups/public/' }
-    maven { url 'https://jitpack.io' } //JitPack
-    maven { url "https://repo.dmulloy2.net/nexus/repository/public/" }
-    maven { url 'https://maven.sk89q.com/repo/' } //WorldGuard/Edit
-    maven githubPackages("MineInAbyss/Idofront") //TODO not working with actions
-    maven githubPackages("MineInAbyss/Guiy")
-    maven githubPackages("MineInAbyss/KotlinSpice")
-    mavenLocal()
 }
 
 dependencies {
@@ -51,10 +51,12 @@ dependencies {
     compileOnly "com.github.WesJD.AnvilGUI:anvilgui:5e3ab1f721"
     compileOnly "org.cultofclang.minecraft:kotlinspice:$kotlin_version+"
 
-    implementation "com.derongan.minecraft:guiy:0.1.+"
+    implementation "com.derongan.minecraft:guiy:0.1.0-alpha.7"
     implementation "com.mineinabyss:idofront:0.2.+"
     implementation "com.mineinabyss:idofront-annotation:0.2.+"
     kapt "com.mineinabyss:idofront-processor:0.2.+"
+    implementation project(":processor")
+    kapt project(":processor")
 }
 
 shadowJar {
@@ -75,9 +77,6 @@ processResources {
     filter ReplaceTokens, tokens: [plugin_version: plugin_version]
 }
 
-compileKotlin { kotlinOptions { jvmTarget = "1.8" } }
-compileTestKotlin { kotlinOptions { jvmTarget = "1.8" } }
-
 //Move into plugins folder
 if (project.hasProperty("plugin_path") && plugin_path) {
     println("Copying to plugin directory $plugin_path")
@@ -90,7 +89,7 @@ if (project.hasProperty("plugin_path") && plugin_path) {
 
 publishing {
     repositories {
-        maven githubPackages("MineInAbyss/Mobzy")
+        maven githubPackage.invoke("MineInAbyss/Mobzy")
     }
     publications {
         gpr(MavenPublication) {
