--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,11 @@
+pluginManagement {
+    plugins {
+        id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
+        id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
+        id 'org.jetbrains.kotlin.kapt' version "$kotlin_version"
+    }
+}
+
 rootProject.name = 'mobzy'
 
 //TODO clean up how we check if properties exist
@@ -12,3 +20,5 @@ if (properties.containsKey("useLocalIdofront") && useLocalIdofront.toBoolean()){
         }
     }
 }
+
+include "processor"
