Starting to shape a very slow basic ecs

--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -27,3 +27,7 @@ dependencies {
     compileOnly "com.google.auto.service:auto-service:1.0-rc7"
     kapt "com.google.auto.service:auto-service:1.0-rc7"
 }
+
+//kapt {
+//    useBuildCache=
+//}
