--- a/build.gradle
+++ b/build.gradle
@@ -50,12 +50,15 @@ dependencies {
     compileOnly "com.comphenix.protocol:ProtocolLib:4.5.0"
     compileOnly "com.github.WesJD.AnvilGUI:anvilgui:5e3ab1f721"
     compileOnly "org.cultofclang.minecraft:kotlinspice:$kotlin_version+"
+    compileOnly "org.hexworks.amethyst:amethyst.core-jvm:2020.0.1-PREVIEW"
 
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation "com.derongan.minecraft:guiy:0.1.0-alpha.7"
     implementation "com.mineinabyss:idofront:0.2.+"
     implementation "com.mineinabyss:idofront-annotation:0.2.+"
     kapt "com.mineinabyss:idofront-processor:0.2.+"
-    implementation project(":processor")
+    implementation "net.onedaybeard.bitvector:bitvector-jvm:0.1.4"
+    compileOnly project(":processor")
     kapt project(":processor")
 }
 
