Going through old TODOs and switch to Skedule

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,7 +5,7 @@ minChunkSpawnRad: 3
 maxChunkSpawnRad: 6
 maxCommandSpawns: 50
 spawnTaskDelay: 100
-mobCaps:
+creatureTypeCaps:
   CREATURE: 20
   MONSTER: 20
   WATER_CREATURE: 5
