--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ allprojects {
         maven { url "https://repo.dmulloy2.net/nexus/repository/public/" }
         maven { url 'https://maven.sk89q.com/repo/' } //WorldGuard/Edit
         maven { url 'https://papermc.io/repo/repository/maven-public/' }
+        maven { url 'http://nexus.okkero.com/repository/maven-releases/' }
         maven githubPackage.invoke("MineInAbyss/Idofront")
         maven githubPackage.invoke("MineInAbyss/Guiy")
         maven githubPackage.invoke("MineInAbyss/KotlinSpice")
@@ -58,6 +59,7 @@ dependencies {
     compileOnly "com.comphenix.protocol:ProtocolLib:4.5.0"
     compileOnly "com.github.WesJD.AnvilGUI:anvilgui:5e3ab1f721"
 
+    implementation "com.okkero.skedule:skedule:1.2.6"
     implementation "net.onedaybeard.bitvector:bitvector-jvm:0.1.4"
     implementation 'com.zaxxer:SparseBitSet:1.1'
     implementation 'org.clapper:javautil:3.2.0'
