Update to Kotlin 1.4.0

--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 java {
-    setSourceCompatibility(1.8)
+    sourceCompatibility JavaVersion.VERSION_1_8
 }
 
 repositories {
@@ -22,12 +22,7 @@ dependencies {
     implementation 'com.squareup:kotlinpoet-metadata-specs:1.6.0'
     implementation 'com.squareup:kotlinpoet-classinspector-elements:1.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation("me.eugeniomarletti.kotlin.metadata:kotlin-metadata:1.4.0")
 
     compileOnly "com.google.auto.service:auto-service:1.0-rc7"
     kapt "com.google.auto.service:auto-service:1.0-rc7"
 }
-
-//kapt {
-//    useBuildCache=
-//}
