--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,8 @@ allprojects {
 }
 
 java {
-    setSourceCompatibility(1.8)
+    sourceCompatibility(JavaVersion.VERSION_1_8)
     withSourcesJar()
-    withJavadocJar()
 }
 
 dependencies {
@@ -65,6 +64,10 @@ dependencies {
     implementation 'org.clapper:javautil:3.2.0'
     compileOnly project(":processor")
     kapt project(":processor")
+
+//    kapt 'com.bennyhuo.kotlin:deepcopy-compiler:1.3.72'
+//    implementation 'com.bennyhuo.kotlin:deepcopy-runtime:1.3.72'
+//    implementation 'net.onedaybeard.artemis:artemis-odb:2.3.0'
 }
 
 shadowJar {
