Lots of cleanup and ECS api consistency improvements

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,12 @@ allprojects {
         mavenLocal()
     }
 
-    compileKotlin { kotlinOptions { jvmTarget = "1.8" } }
+    compileKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
+            freeCompilerArgs += "-Xopt-in=kotlinx.serialization.ExperimentalSerializationApi"
+        }
+    }
     compileTestKotlin { kotlinOptions { jvmTarget = "1.8" } }
 }
 
