--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,3 +13,6 @@ commands:
     aliases: [mz, mobzy]
     description: The main mobzy command
     usage: /mobzy [sub command]
+  looty:
+    description: The main looty command
+    usage: /looty [sub command]
