--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "com.derongan.minecraft:guiy:0.1.0-alpha.7"
     implementation "com.mineinabyss:idofront:0.3.24"
     compileOnly "com.mineinabyss:idofront-annotation:0.3.24"
+    compileOnly "com.mineinabyss:geary"
     kapt "com.mineinabyss:idofront-processor:0.3.24"
 
     compileOnly "de.erethon:headlib:3.0.2"
