Use new KotlinSpice

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ pluginManagement {
         id 'org.jetbrains.kotlin.jvm' version "$kotlin_version"
         id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
         id 'org.jetbrains.kotlin.kapt' version "$kotlin_version"
+        id 'com.github.johnrengelman.shadow' version '6.1.0'
     }
 }
 
