--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
-import org.apache.tools.ant.filters.ReplaceTokens
-
 plugins {
     id 'java'
     id 'idea'
     id 'maven-publish'
-    id 'com.github.johnrengelman.shadow' version '6.0.0'
+    id 'com.github.johnrengelman.shadow'
     id 'org.jetbrains.kotlin.jvm'
     id 'org.jetbrains.kotlin.plugin.serialization'
     id 'org.jetbrains.kotlin.kapt'
     id 'io.github.0ffz.github-packages' version '1.0.5'
 }
+
+apply from: 'https://raw.githubusercontent.com/MineInAbyss/shared-gradle/master/common.gradle'
 
 allprojects {
     group = 'com.mineinabyss'
@@ -45,19 +45,15 @@ allprojects {
     compileTestKotlin { kotlinOptions { jvmTarget = "1.8" } }
 }
 
-java {
-    sourceCompatibility(JavaVersion.VERSION_1_8)
-    withSourcesJar()
-}
-
 dependencies {
     compileOnly "com.destroystokyo.paper:paper-api:$server_version"
     compileOnly "org.spigotmc:spigot:$server_version" // NMS
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    compileOnly "org.cultofclang.minecraft:kotlinspice:$kotlin_version+"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-cbor:1.0.0-RC"
-    implementation "com.derongan.minecraft:guiy:0.1.0-alpha.7"
+    compileOnly platform("com.mineinabyss:kotlinspice:1.4.10-10")
+    compileOnly "com.okkero.skedule:skedule"
+    compileOnly "org.nield:kotlin-statistics"
+
     implementation "com.mineinabyss:idofront:0.3.24"
     compileOnly "com.mineinabyss:idofront-annotation:0.3.24"
     compileOnly "com.mineinabyss:geary"
@@ -66,18 +62,10 @@ dependencies {
     compileOnly "de.erethon:headlib:3.0.2"
     compileOnly "com.sk89q.worldguard:worldguard-bukkit:7.0.2"
     compileOnly "com.comphenix.protocol:ProtocolLib:4.5.0"
-    compileOnly "com.github.WesJD.AnvilGUI:anvilgui:5e3ab1f721"
 
-    implementation "com.okkero.skedule:skedule:1.2.6"
-    implementation "net.onedaybeard.bitvector:bitvector-jvm:0.1.4"
-    implementation 'com.zaxxer:SparseBitSet:1.1'
-    implementation 'org.clapper:javautil:3.2.0'
     compileOnly project(":processor")
     kapt project(":processor")
 
-//    kapt 'com.bennyhuo.kotlin:deepcopy-compiler:1.3.72'
-//    implementation 'com.bennyhuo.kotlin:deepcopy-runtime:1.3.72'
-//    implementation 'net.onedaybeard.artemis:artemis-odb:2.3.0'
 }
 
 shadowJar {
@@ -93,20 +81,6 @@ shadowJar {
     }
 }
 build.dependsOn shadowJar
-
-processResources {
-    filter ReplaceTokens, tokens: [plugin_version: plugin_version]
-}
-
-//Move into plugins folder
-if (project.hasProperty("plugin_path") && plugin_path) {
-    println("Copying to plugin directory $plugin_path")
-    task copyJar(type: Copy) {
-        from shadowJar // here it automatically reads jar file produced from jar task
-        into plugin_path
-    }
-    build.dependsOn copyJar
-}
 
 publishing {
     repositories {
