--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: @plugin_version@
 author: Offz
 main: com.mineinabyss.mobzy.Mobzy
 api-version: 1.16
-depend: [WorldGuard, ProtocolLib, KotlinSpice]
+depend: [Geary, WorldGuard, ProtocolLib, KotlinSpice]
 
 prefix: Mobzy
 description: A custom entities API
