--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -25,15 +25,15 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Install NMS
-        if: steps.cache.outputs.cache-hit != 'true'
-        uses: derongan/nmsaction@v1
-        with:
-          rev: 1.16.2
-      - name: Install nms into m2
-        run: mkdir -p $HOME/.m2/repository && cp -a nms-build/.m2/repository/. $HOME/.m2/repository
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+#      - name: Install NMS
+#        if: steps.cache.outputs.cache-hit != 'true'
+#        uses: derongan/nmsaction@v1
+#        with:
+#          rev: 1.16.2
+#      - name: Install nms into m2
+#        run: mkdir -p $HOME/.m2/repository && cp -a nms-build/.m2/repository/. $HOME/.m2/repository
+#      - name: Grant execute permission for gradlew
+#        run: chmod +x gradlew
       - name: Publish artifact
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
