--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm'
     id 'org.jetbrains.kotlin.plugin.serialization'
     id 'org.jetbrains.kotlin.kapt'
-    id 'io.github.0ffz.github-packages' version '1.1.0'
+    id 'io.github.0ffz.github-packages' version '1.2.0'
 }
 
 apply from: 'https://raw.githubusercontent.com/MineInAbyss/shared-gradle/master/common.gradle'
@@ -52,7 +52,7 @@ dependencies {
     implementation "com.mineinabyss:idofront:0.3.26"
     compileOnly "com.mineinabyss:idofront-annotation:0.3.26"
     compileOnly "com.mineinabyss:geary"
-    kapt "com.mineinabyss:idofront-processor:0.3.26"
+//    kapt "com.mineinabyss:idofront-processor:0.3.26"
 
     compileOnly "de.erethon:headlib:3.0.2"
     compileOnly "com.sk89q.worldguard:worldguard-bukkit:7.0.2"
