--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -16,12 +16,12 @@ dependencies {
 //    implementation project(':annotation')
     compileOnly "org.spigotmc:spigot-api:$server_version" //Spigot
     compileOnly "org.spigotmc:spigot:$server_version" // NMS
-
-    implementation 'com.squareup:kotlinpoet:1.6.0'
-    implementation 'com.squareup:kotlinpoet-metadata:1.6.0'
-    implementation 'com.squareup:kotlinpoet-metadata-specs:1.6.0'
-    implementation 'com.squareup:kotlinpoet-classinspector-elements:1.6.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    
+    implementation 'com.squareup:kotlinpoet:1.7.2'
+    implementation 'com.squareup:kotlinpoet-metadata:1.7.2'
+    implementation 'com.squareup:kotlinpoet-metadata-specs:1.7.2'
+    implementation 'com.squareup:kotlinpoet-classinspector-elements:1.7.2'
 
     compileOnly "com.google.auto.service:auto-service:1.0-rc7"
     kapt "com.google.auto.service:auto-service:1.0-rc7"
