--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
     id 'idea'
     id 'maven-publish'
-    id 'com.github.johnrengelman.shadow'
+    id 'com.github.johnrengelman.shadow' version '6.1.0'
     id 'org.jetbrains.kotlin.jvm'
     id 'org.jetbrains.kotlin.plugin.serialization'
     id 'org.jetbrains.kotlin.kapt'
@@ -54,7 +54,7 @@ dependencies {
     compileOnly "org.nield:kotlin-statistics"
 
     implementation "com.mineinabyss:idofront:0.3.29"
-    compileOnly "com.mineinabyss:geary:0.1"
+    compileOnly "com.mineinabyss:geary:0.1.6"
 
     compileOnly "de.erethon:headlib:3.0.2"
     compileOnly "com.sk89q.worldguard:worldguard-bukkit:7.0.2"
@@ -65,8 +65,7 @@ dependencies {
 }
 
 shadowJar {
-    getArchiveBaseName().set("Mobzy")
-    getArchiveClassifier().set(null)
+    archivesBaseName = "Mobzy"
 
     relocate 'com.derongan.minecraft.guiy', "${project.group}.${project.name}.guiy".toLowerCase()
     relocate 'com.mineinabyss.idofront', "${project.group}.${project.name}.idofront".toLowerCase()
