--- a/build.gradle
+++ b/build.gradle
@@ -54,8 +54,8 @@ dependencies {
     compileOnly "org.nield:kotlin-statistics"
 
     implementation "com.mineinabyss:idofront:0.4.3"
-    compileOnly "com.mineinabyss:geary-ecs:0.1.6"
-    compileOnly "com.mineinabyss:geary-spigot:0.1.6"
+    compileOnly "com.mineinabyss:geary:0.2.12"
+    compileOnly "com.mineinabyss:geary-spigot:0.2.12"
 
     compileOnly "de.erethon:headlib:3.0.2"
     compileOnly "com.sk89q.worldguard:worldguard-bukkit:7.0.2"
