--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -22,7 +22,29 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      # Package publish
       - name: Publish to GitHub Packages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: gradle publish
+
+      # Documentation publish
+      - name: Generate Dokka
+        run: gradle dokkaHtml
+
+      - name: Move Dokka's assets # from https://github.com/Kotlin/dokka/issues/163
+        run: |
+          set -x -o nounset -o errexit -o pipefail
+          cd ./build/dokka/html
+          mv ./styles ./images ./scripts navigation.html ./mobzy/
+          find ./poweb/ -name '*.html' -print0 | xargs -0 sed -i 's;../styles/;styles/;g'
+          find ./poweb/ -name '*.html' -print0 | xargs -0 sed -i 's;../images/;images/;g'
+          find ./poweb/ -name '*.html' -print0 | xargs -0 sed -i 's;../scripts/;scripts/;g'
+          find ./poweb/ -name '*.html' -print0 | xargs -0 sed -i 's;pathToRoot = "../;pathToRoot = ";g'
+          sed -i 's;href="poweb/;href=";g' ./poweb/navigation.html
+
+      - name: Publish documentation to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build/dokka/html/mobzy
