Switch to Gradle Kotlin DSL, Update to Gradle 7.0

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Mobzy
-version: @plugin_version@
+version: ${plugin_version}
 author: Offz
 main: com.mineinabyss.mobzy.Mobzy
 api-version: 1.16
