Start update to 1.17 and split up geary

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
 name: Mobzy
 version: ${plugin_version}
 author: Offz
-main: com.mineinabyss.mobzy.Mobzy
+main: com.mineinabyss.mobzy.MobzyPlugin
 api-version: 1.16
-depend: [Geary, WorldGuard, ProtocolLib, ProtocolBurrito, KotlinSpice]
+depend: [Geary, WorldGuard, ProtocolLib, ProtocolBurrito]
 
 prefix: Mobzy
 description: A custom entities API
