--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,10 @@
 group=com.mineinabyss
 version=0.10
-kotlinVersion=1.5.10
-serverVersion=1.16.5-R0.1-SNAPSHOT
+kotlinVersion=1.5.21
+serverVersion=1.17.1-R0.1-SNAPSHOT
+useNMS=true
+miaConventionsVersion=1.5.21-14
+
+# Workaround for Kapt not working on jdk 16
+org.gradle.jvmargs=--illegal-access=permit
+kapt.use.worker.api=false
