--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,8 @@ kotlinVersion=1.5.21
 serverVersion=1.17.1-R0.1-SNAPSHOT
 useNMS=true
 miaConventionsVersion=1.5.21-16
+idofrontVersion=1.17.1-0.6.24
 
 # Workaround for Kapt not working on jdk 16
-org.gradle.jvmargs=--illegal-access=permit
-kapt.use.worker.api=false
+#org.gradle.jvmargs=--illegal-access=permit
+#kapt.use.worker.api=false
