--- a/processor/gradle.properties
+++ b/processor/gradle.properties
@@ -1,6 +1,6 @@
 #kapt.use.worker.api=true
 
 # Workaround for Kapt not working on jdk 16
-org.gradle.jvmargs=--illegal-access=permit
-kapt.use.worker.api=false
+#org.gradle.jvmargs=--illegal-access=permit --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+#kapt.use.worker.api=false
 copyJar=false
