Remove processor and kapt dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 group=com.mineinabyss
 version=0.10
 kotlinVersion=1.5.21
+kspVersion=1.5.21-1.0.0-beta07
 serverVersion=1.17.1-R0.1-SNAPSHOT
 useNMS=true
 miaConventionsVersion=1.5.21-16
