--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,8 +1,7 @@
 # Send debug messages
 debug: false
 doMobSpawns: false
-minChunkSpawnRad: 3
-maxChunkSpawnRad: 6
+chunkSpawnRad: 3..6
 maxCommandSpawns: 50
 spawnTaskDelay: 100
 creatureTypeCaps:
