Fix mobzy prefabs

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ author: Offz
 main: com.mineinabyss.mobzy.MobzyPlugin
 api-version: 1.16
 depend: [Geary, WorldGuard, ProtocolLib, ProtocolBurrito]
+softdepend: [ Looty ]
 
 prefix: Mobzy
 description: A custom entities API
